tests/sksl/errors/UndefinedSymbol.glsl
### Compilation failed:

error: 1: unknown identifier 'x'
error: 2: unknown identifier 'x'
error: 3: unknown identifier 'x'
error: 4: unknown identifier 'x'
error: 4: unknown identifier 'z'
error: 6: unknown identifier 'f'
error: 6: unknown identifier 'h'
error: 7: unknown identifier 'j'
8 errors
